<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:baselineAligned="false">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="@dimen/abc_action_bar_default_height_material"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.1">

        <com.beardedhen.androidbootstrap.AwesomeTextView
            app:bootstrapBrand="primary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            app:bootstrapText="@string/ResultTitle"
            android:id="@+id/textView5"
            android:layout_gravity="center"
            android:textSize="40dp"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="27dp">

        <com.beardedhen.androidbootstrap.AwesomeTextView
            app:bootstrapBrand="primary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ResultDataView"
            android:layout_gravity="center_horizontal"
            android:text="@string/ArrStaname" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.beardedhen.androidbootstrap.AwesomeTextView
            app:bootstrapBrand="danger"
            android:textSize="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="New Text"
            android:id="@+id/DocumentTypeView"
            android:enabled="false"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1">

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="480dp"
            android:id="@+id/TrainList"
            android:layout_weight="0.30" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/NoData"
            android:id="@+id/EmptyView" />

    </LinearLayout>

</LinearLayout>